Fix overflow caused by wrapper border-radius

--- a/assets/main.css
+++ b/assets/main.css
@@ -335,6 +335,9 @@ p {
   border: 1px solid #000;
   border-radius: var(--padding);
 }
+.search__input {
+  border-radius: inherit !important;
+}
 .search__submit {
   background: none !important;
 }
