--- a/assets/styles/blocks/_search.sass
+++ b/assets/styles/blocks/_search.sass
@@ -8,5 +8,8 @@
         border: 1px solid #000
         border-radius: var(--padding)
 
+    &__input
+        border-radius: inherit !important
+
     &__submit
         background: none !important
